==> kienvo/tpa-comboard-firmware/Core/Src/enc28j60.c <==
#include "enc28j60.h"

uint8_t enc28j60ReadOp(uint8_t op, uint8_t address)
{
		uint8_t temp;
        enableChip;
        // issue read command
        ENC28J60_SendByte(op | (address & ADDR_MASK));
//        temp = ENC28J60_SendByte(0xFF);
//        if (address & 0x80)
//            temp = ENC28J60_SendByte(0xFF);
//        spi_tx[0] = op | (address & ADDR_MASK);
        if (address & 0x80)
        {
        	HAL_SPI_Receive(hspi, &spi_rx[0], 2, 0xffffffff);
        }
        else
        {
        	HAL_SPI_Receive(hspi, &spi_rx[1], 1, 0xffffffff);
        }
        temp = spi_rx[1];
        // release CS
        disableChip;
        return temp;
}

void enc28j60WriteOp(uint8_t op, uint8_t address, uint8_t data)
{
    enableChip;
    ENC28J60_SendByte(op | (address & ADDR_MASK));
    ENC28J60_SendByte(data);
    disableChip;
}

void enc28j60ReadBuffer(uint16_t len, uint8_t* data)
{
    enableChip;
    ENC28J60_SendByte(ENC28J60_READ_BUF_MEM);
//    while (len--) {
//        *data++ = ENC28J60_SendByte(0x00);
//    }
    HAL_SPI_Receive(hspi, data, len, 0xffffffff);
    disableChip;
    // Remove next line suggested by user epam - not needed
//    *data='\0';
}

void enc28j60WriteBuffer(uint16_t len, uint8_t* data)
{
    enableChip;
    ENC28J60_SendByte(ENC28J60_WRITE_BUF_MEM);
//    while (len--)
//        ENC28J60_SendByte(*data++);
    HAL_SPI_Transmit(hspi, data, len, 0xffffffff);

    disableChip;
}
