==> peacebyfire/HackDanceville/DANCEFLOOR/DanceFloorModule4/eth/enc28j60.c <==
#include <avr/io.h>
#include <inttypes.h>
#include <avr/interrupt.h>
#include "../globals.h"
#include "enc28j60.h"
#include "../delay.h"
#define ENC28J60_CONTROL_CS_PORT	PORTB
#define ENC28J60_CONTROL_CS_DDR		DDRB
#define ENC28J60_CONTROL_CS_PIN		2
#define ENC28J60_CONTROL_SCLK_PORT	PORTB
#define ENC28J60_CONTROL_SCLK_DDR	DDRB
#define ENC28J60_CONTROL_SCLK_PIN	5
#define ENC28J60_CONTROL_MOSI_PORT	PORTB
#define ENC28J60_CONTROL_MOSI_DDR	DDRB
#define ENC28J60_CONTROL_MOSI_PIN	3
#define ENC28J60_CONTROL_MISO_PORT	PORTB
#define ENC28J60_CONTROL_MISO_DDR	DDRB
#define ENC28J60_CONTROL_MISO_PIN	4
#define ENC28J60_CONTROL_INT_PORT	PORTD
#define ENC28J60_CONTROL_INT_DDR	DDRD
#define ENC28J60_CONTROL_INT_PIN	3
#define SELECT_ENC28J60 ENC28J60_CONTROL_CS_PORT&=~(1<<ENC28J60_CONTROL_CS_PIN)
#define DESELECT_ENC28J60 ENC28J60_CONTROL_CS_PORT|=(1<<ENC28J60_CONTROL_CS_PIN)

uint8_t enc28j60ReadOp(uint8_t op, uint8_t address)
{
        SELECT_ENC28J60;
        // issue read command
        sendSPI(op | (address & ADDR_MASK));
        sendSPI(0x00);
        if (address & 0x80)
            sendSPI(0x00);

        uint8_t result = SPDR;
        // release CS
        DESELECT_ENC28J60;
        return result;
}

void enc28j60WriteOp(uint8_t op, uint8_t address, uint8_t data)
{
    SELECT_ENC28J60;
    sendSPI(op | (address & ADDR_MASK));
    sendSPI(data);
    DESELECT_ENC28J60;
}

void enc28j60ReadBuffer(uint16_t len, uint8_t* data)
{
    SELECT_ENC28J60;
    sendSPI(ENC28J60_READ_BUF_MEM);
    while (len--) {
        sendSPI(0x00);
        *data++ = SPDR;
    }
    DESELECT_ENC28J60;
    // Remove next line suggested by user epam - not needed
//    *data='\0';
}

void enc28j60WriteBuffer(uint16_t len, uint8_t* data)
{
    SELECT_ENC28J60;
    sendSPI(ENC28J60_WRITE_BUF_MEM);
    while (len--)
        sendSPI(*data++);

    DESELECT_ENC28J60;
}
